--- a/src/components/News.css
+++ b/src/components/News.css
@@ -1,16 +1,16 @@
 .news-background {
-    background: #313442;
+    background: #52586d;
     height: 100vh;
   }
   
   .news-title {
     display: flex;
     width: 100%;
-    margin-top: -25px;
     justify-content: center;
-    border-bottom: 1px solid #52586d;
-    padding-bottom: 18px;
+    border-bottom: 1px solid #373c49;
+    padding: 19px 0px;
     color: white;
+    
   }
   .cards-container {
     width: 100%;
@@ -18,4 +18,3 @@
     justify-content: space-around;
     margin-top: 20px;
   }
-  
