working on landing page

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -25,3 +25,24 @@
   font-size: 1.2rem;
   text-decoration: none;
 }
+
+.tool-bar {
+  background: #52586d;
+}
+.icon-btn {
+  margin-right: 2;
+}
+.news {
+  flex-grow: 1;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.logout-parent {
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+}
