--- a/src/components/News.css
+++ b/src/components/News.css
@@ -7,7 +7,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    border-bottom: 1px solid #373c49;
+    /* border-bottom: 1px solid #373c49; */
     padding: 19px 0px;
     color: white;
     
