--- a/src/components/Rooms.css
+++ b/src/components/Rooms.css
@@ -1,49 +1,47 @@
 .rooms-container {
-    height: 100vh;
-    max-width: 215px;
-    background: #3d4251;
-    display: flex;
-    margin-left: 72px;
-    flex-direction: column;
-    position: fixed;
+  height: 100vh;
+  width: 215px;
+  background: #3d4251;
+  display: flex;
+  margin-left: 73px;
+  flex-direction: column;
+  position: fixed;
 }
 
 .server-name {
-    width: 100%;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #373c49;
-    padding: 39px 0px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #373c49;
+  padding: 39px 0px;
 }
 
 .text-channel-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .text-channels-title {
-    width: 100%;
-    color: #ccc;
-    padding: 5px 0px 5px 20px;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
+  width: 100%;
+  color: #ccc;
+  padding: 5px 0px 5px 20px;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
 }
-
 .text-channels-title:hover {
-    color: white;
-    border-radius: 3px;
+  color: white;
+  border-radius: 3px;
 }
-
-
 .channel-names-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
 }
